@@ -5,16 +5,18 @@ import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 import java.util.ResourceBundle;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Flow;
+import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.annotation.OverridingMethodsMustInvokeSuper;
@@ -33,6 +35,8 @@ import com.ak.fx.scene.AxisYController;
 import com.ak.fx.scene.Chart;
 import com.ak.fx.scene.ScaleYInfo;
 import com.ak.fx.util.FxUtils;
+import com.ak.logging.OutputBuilders;
+import com.ak.util.Extension;
 import com.ak.util.Strings;
 import javafx.animation.Animation;
 import javafx.animation.KeyFrame;
@@ -46,7 +50,7 @@ import javafx.scene.input.TransferMode;
 import javafx.scene.input.ZoomEvent;
 import javafx.util.Duration;
 
-public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<V>>
+abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<V>>
     implements Initializable, Flow.Subscriber<int[]>, AutoCloseable, ViewController {
   @Nonnull
   private final GroupService<T, R, V> service;
@@ -57,17 +61,26 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
   @Nullable
   @FXML
   private Chart chart;
+  @Nonnegative
+  private long countSamples;
+  @Nullable
+  private SequentialTransition transition;
 
   @ParametersAreNonnullByDefault
-  protected AbstractViewController(Provider<BytesInterceptor<T, R>> interceptorProvider,
-                                   Provider<Converter<R, V>> converterProvider) {
+  AbstractViewController(Provider<BytesInterceptor<T, R>> interceptorProvider,
+                         Provider<Converter<R, V>> converterProvider) {
     service = new GroupService<>(interceptorProvider::get, converterProvider::get);
     Executors.newSingleThreadExecutor().execute(() -> {
-      try (DirectoryStream<Path> paths = Files.newDirectoryStream(Paths.get(Strings.EMPTY), "*.bin")) {
+      try (DirectoryStream<Path> paths = Files.newDirectoryStream(
+          OutputBuilders.build(Strings.EMPTY).getPath().getParent(), Extension.BIN.attachTo("*"))
+      ) {
         paths.forEach(path -> ConverterApp.doConvert(interceptorProvider, converterProvider, path));
       }
       catch (IOException e) {
         Logger.getLogger(getClass().getName()).log(Level.WARNING, e.getMessage(), e);
+      }
+      finally {
+        Logger.getLogger(getClass().getName()).info(() -> "Conversion finished");
       }
     });
   }
@@ -89,7 +102,7 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
         event.consume();
       });
       chart.setVariables(service.getVariables().stream().filter(v -> v.options().contains(Variable.Option.VISIBLE))
-          .map(Variables::toString).collect(Collectors.toList()));
+          .map(Variables::toString).toList());
       chart.titleProperty().bind(axisXController.zoomProperty().asString());
       chart.diagramHeightProperty().addListener((observable, oldValue, newValue) -> {
         axisYController.setLineDiagramHeight(newValue.doubleValue());
@@ -97,18 +110,25 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
       });
       chart.diagramWidthProperty().addListener((observable, oldValue, newValue) -> axisXController.preventEnd(newValue.doubleValue()));
       axisXController.stepProperty().addListener((observable, oldValue, newValue) -> chart.setXStep(newValue.doubleValue()));
+      axisXController.startProperty().addListener((observable, oldValue, newValue) -> changed());
       axisXController.lengthProperty().addListener((observable, oldValue, newValue) ->
           chart.setMaxSamples(newValue.intValue() / axisXController.getDecimateFactor())
       );
       axisXController.setFrequency(service.getFrequency());
     }
 
-    Timeline timeline = new Timeline();
-    timeline.getKeyFrames().add(new KeyFrame(Duration.millis(100), (ActionEvent actionEvent) -> axisXController.scroll(-100)));
+    var timeline = new Timeline(
+        new KeyFrame(Duration.millis(50),
+            (ActionEvent actionEvent) -> {
+              int start = (int) (Math.max(0, countSamples - axisXController.getLength()));
+              axisXController.setStart(start);
+              if (start == 0) {
+                changed();
+              }
+            })
+    );
     timeline.setCycleCount(Animation.INDEFINITE);
-    SequentialTransition animation = new SequentialTransition();
-    animation.getChildren().addAll(timeline);
-    animation.play();
+    transition = new SequentialTransition(timeline);
     service.subscribe(this);
   }
 
@@ -119,17 +139,18 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
       subscription.cancel();
     }
     subscription = s;
-    changed();
     subscription.request(axisXController.getLength());
+    countSamples = 0;
+    Objects.requireNonNull(transition).play();
+    changed();
+    CompletableFuture.delayedExecutor(1, TimeUnit.SECONDS).execute(this::changed);
   }
 
   @Override
   @OverridingMethodsMustInvokeSuper
   public void onNext(@Nonnull int[] ints) {
-    FxUtils.invokeInFx(() -> Objects.requireNonNull(chart).setBannerText(
-        service.getVariables().stream().filter(v -> v.options().contains(Variable.Option.TEXT_VALUE_BANNER))
-            .map(v -> Variables.toString(v, ints[v.ordinal()])).collect(Collectors.joining(Strings.NEW_LINE_2)))
-    );
+    countSamples++;
+    displayBanner(ints);
   }
 
   @Override
@@ -139,6 +160,7 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
 
   @Override
   public final void onComplete() {
+    Objects.requireNonNull(transition).stop();
     changed();
   }
 
@@ -152,11 +174,13 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
   @OverridingMethodsMustInvokeSuper
   public void refresh() {
     service.refresh();
+    countSamples = 0;
+    Objects.requireNonNull(transition).play();
     changed();
   }
 
   @Override
-  public final void zoom(ZoomEvent event) {
+  public final void zoom(@Nonnull ZoomEvent event) {
     if (chart != null) {
       axisXController.zoom(event.getZoomFactor());
       axisXController.preventEnd(chart.diagramWidthProperty().doubleValue());
@@ -165,7 +189,7 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
   }
 
   @Override
-  public final void scroll(ScrollEvent event) {
+  public final void scroll(@Nonnull ScrollEvent event) {
     axisXController.scroll(event.getDeltaX());
   }
 
@@ -182,19 +206,31 @@ public abstract class AbstractViewController<T, R, V extends Enum<V> & Variable<
         if (v.options().contains(Variable.Option.VISIBLE)) {
           int[] values = FilterBuilder.of().sharpingDecimate(axisXController.getDecimateFactor()).filter(chartData[v.ordinal()]);
           ScaleYInfo<V> scaleInfo = axisYController.scale(v, values);
-          Objects.requireNonNull(chart).setAll(v.indexBy(Variable.Option.VISIBLE), IntStream.of(values).unordered().parallel()
-              .mapToDouble(scaleInfo).toArray(), scaleInfo);
+          Objects.requireNonNull(chart).setAll(
+              v.indexBy(Variable.Option.VISIBLE),
+              IntStream.of(values).unordered().parallel().mapToDouble(scaleInfo).toArray(),
+              scaleInfo
+          );
         }
       }
       if (chartData[0].length > 0) {
-        onNext(service.getVariables().stream().mapToInt(
-            e -> {
-              int[] ints = chartData[e.ordinal()];
-              return ints[ints.length - 1];
-            }).toArray()
+        displayBanner(service.getVariables().stream()
+            .mapToInt(
+                e -> {
+                  int[] ints = chartData[e.ordinal()];
+                  return ints[ints.length - 1];
+                })
+            .toArray()
         );
       }
       axisXController.checkLength(chartData[0].length);
     });
+  }
+
+  private void displayBanner(@Nonnull int[] ints) {
+    FxUtils.invokeInFx(() -> Objects.requireNonNull(chart).setBannerText(
+        service.getVariables().stream().filter(v -> v.options().contains(Variable.Option.TEXT_VALUE_BANNER))
+            .map(v -> Variables.toString(v, ints[v.ordinal()])).collect(Collectors.joining(Strings.NEW_LINE_2)))
+    );
   }
 }
